--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -2,16 +2,16 @@ subheader: The Riverside coworking space located in the heart of downtown.
 about :  
   - icon: icon-clock
     contents : 24/7 Member Access and Daily Rates for visitors
-  - icon: icon-marker
+  - icon: icon-location
     contents: Downtown Riverside
     href: 'https://www.google.com/maps/preview#!q=3567+Main+St%2C+Riverside%2C+CA&data=!4m15!2m14!1m13!1s0x80dcb1fa99afe221%3A0xfe3f25b87b503ecc!3m8!1m3!1d6608!2d-117.3729689!3d33.9841841!3m2!1i1535!2i767!4f13.1!4m2!3d33.9841879!4d-117.372977'
     link-text: '3567 Main St, Riverside, CA'
-  - icon: icon-launch
+  - icon: icon-rocket
     contents: Coworking and Community at just
     href: '#signup'
-    link-text: '$10/month'
+    link-text: '$100/month'
 expect :
-  contents: 'Open tables, working wifi, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on <a href="http://foursquare.com">foursquare</a>.'
+  contents: 'Open tables, working wifi, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on <a href="http://foursquare.com">Foursquare</a>.'
   list :
     - wifi
     - 24/7 Access
@@ -19,4 +19,4 @@ expect :
     - Nearby Eats
     - Meeting Space
     - White Boards
-join : "How much does it cost? Open tables, working wifi, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on foursquare."
+join : "How much does it cost? <br>Membership is just $100/mo at this time or $50/mo for students.<br><br>Email us at <a href='mailto:info@riverside.io'>info@riverside.io</a> to learn more.<br><br>You can use the form at right to get signed up right away. After doing so, follow up with us via <a href='mailto:info@riverside.io'>info@riverside.io</a>."
