--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,25 +1,40 @@
 - name : Adam Webster
+  avatar : ./img/members/adamwebster.jpg
   about : Adam is currently employed as an IT Director at the Inland Empire Labor Management Cooperation Committee. He is interested in exploring the intersection between technology community and creativity. 
 - name : Adrian Testa-Avila
+  avatar : ./img/members/adriantesta-avila.png
 - name : Benjamin Mueller
+  avatar : ./img/members/benjaminmueller.jpeg
   about : Benjamin believes in GPL software. He is a co-organizer of Inland Empire WordPress. His favorite languages are PHP and JavaScript. He's learning Mongo and Node.js.
 - name : Conley Read
+  avatar : ./img/members/conleyread.jpg
   about : Conley manages the Computing and Communications Applications and Virtualization team at UC Riverside. He's also a Co-founder of StartupIE.
 - name : Daniel Villarreal
+  avatar : ./img/members/danielvillarreal.jpg
   about : "Daniel handles system operations & web development for Cal State San Bernardino. He likes to build and break stuff and knows his way around Unix really well."
-- name: Jacob
+- name: Jacob Lowe
   url: http://jacoblowe.me
+  avatar : ./img/members/jacoblowe.jpg
   about: Jacob Lowe is passionate about the web and loves to push the bar with JavaScript. He helps organize Riverside.js. He is also a proud linux user.
 - name : Justin Nelson
+  avatar : ./img/members/justinnelson.jpg
   about : "Justin is a PhD student at UC Riverside, a card-carrying member of EFF, a Linux geek, and a rabble-rouser. He enjoys tinkering, beer, altnernative transportation, and free culture."
 - name : Kevin Chandler
+  avatar : ./img/members/kevinchandler.jpg
+- name : Lauren Patterson
+  avatar : ./img/members/laurenpatterson.jpg
 - name : Mike Kennedy
+  avatar : ./img/members/mikekennedy.jpg
   about : "Mike is an Enterprise Architect at UC Riverside. He is an organizer of StartupIE and enjoys programming in Java, Objective-C and Ruby."
 - name : Mike Stecker
+  avatar : ./img/members/mikestecker.jpg
   about : "Mike is the CTO for Maven 2.0 and specializes in #EECMS. He is currently tinkering with learning Ruby on Rails, Javascript and mobile application development."
 - name : Ralph Richardson
+  avatar : ./img/members/ralphrichardson.jpg
   about : "Serial Entrepreneur. Founder & CEO of Maven 2.0. Currently building @hecklersports and @BermyArtist. Consulting for a few other cool start-ups."
 - name : Scott Motte
+  avatar : ./img/members/scottmotte.png
   about : Scott is founder of Signature.io. He also consults as a software engineer for startups around Southern California. He likes to code in Ruby and JavaScript.
 - name : Victor Hill
+  avatar : ./img/members/victorhill.jpg
   about : Victor Hill is an IT manager for the Computer Science department at UC Riverside. He's deeply passionate about IT and open source.
