taking out im from bremuda

--- a/_data/testamonials.yml
+++ b/_data/testamonials.yml
@@ -15,4 +15,4 @@
   contents : "I love Riverside.io so much I drive 1 hour each way from Menifee - uphill both ways in the snow. I just can't get enough...or away. Riverside.io is my muse, and the people there are her chorus. 1s and 0s flow from my veins when I'm there. You should be there too."
 - name : Ralph Richardson
   avatar : ./img/members/ralphrichardson.jpg
-  contents : "I'm cool. And cool people need to hang out with other cool people. I'm from Bermuda. That's why I go to Riverside.io, and to build businesses and startups and stuff."
+  contents : "I'm cool. And cool people need to hang out with other cool people. That's why I go to Riverside.io, and to build businesses and startups and stuff."
