adding Long to members

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -21,6 +21,8 @@
   about : "Justin is a PhD student at UC Riverside, a card-carrying member of EFF, a Linux geek, and a rabble-rouser. He enjoys tinkering, beer, altnernative transportation, and free culture."
 - name : Kevin Chandler
   avatar : ./img/members/kevinchandler.jpg
+- name : Long Dao
+  avatar : ./img/members/longdao.jpg
 - name : Lauren Patterson
   avatar : ./img/members/laurenpatterson.jpg
 - name : Mike Kennedy
