--- a/_data/members.yml
+++ b/_data/members.yml
@@ -27,6 +27,7 @@
   about : "I am so glad I made the switch over to Riverside.IO. Thanks to it, I've signed several website contracts, made a lot of talented friends, listened to Scott Motte's crazy pop music blazing in the background, and found a hot girl and got engaged to be married. If you come stop by, you WILL find yourself a girl (or guy) and save a LOT on car insurance too. Gosh o MIGHTY. I love Riverside.IO so much that I can barely walk. Barely BREATHE. I need someone to walk across the street with sometimes or I'll fall down. I love it so much that I think I'll have my wedding here. Maybe I'll name my first kid Riverside.IO. You should too."
 - name : Lauren Patterson
   avatar : ./img/members/laurenpatterson.jpg
+  about : "Co-Working? More like Co-Twerking! This is the best place in town for networking with big shots, mentoring America's future, making friends with brogrammers, getting lunch at cool downtown restaurants, listening to eclectic music, and of course - getting some work done."
 - name : Mike Kennedy
   avatar : ./img/members/mikekennedy.jpg
   about : "Mike is an Enterprise Architect at UC Riverside. He is an organizer of StartupIE and enjoys programming in Java, Objective-C and Ruby."
