--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -7,9 +7,9 @@ about :
   - icon: icon-rocket
     contents: "Coworking and Community at just [$100/month](#signup)"
 expect :
-  contents: 'Open tables, working wifi, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on [Foursquare](http://foursquare.com).'
+  contents: 'Open tables, working WIFI, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on [Foursquare](http://foursquare.com).'
   list :
-    - wifi
+    - WIFI
     - 24/7 Access
     - Downtown
     - Nearby Eats
