--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -15,4 +15,15 @@ expect :
     - Nearby Eats
     - Meeting Space
     - White Boards
-join : "How much does it cost? <br>Membership is just $100/mo at this time or $50/mo for students.<br><br>Email us at <a href='mailto:info@riverside.io'>info@riverside.io</a> to learn more.<br><br>You can use the form at right to get signed up right away. After doing so, follow up with us via <a href='mailto:info@riverside.io'>info@riverside.io</a>."
+  photos :
+    - src: /img/space/1.jpg 
+      description: Find a desk. 
+    - src: /img/space/2.jpg 
+      description: Use the whiteboards. 
+    - src: /img/space/3.jpg 
+      description: Put your company logo or upcoming event in the window.
+    - src: /img/space/4.jpg 
+      description: Take a break on the couch. 
+    - src: /img/space/5.jpg 
+      description: Work outside in the California weather. 
+join : "How much does it cost? <br>Membership is just $100/mo at this time or $50/mo for students.<br><br>Email us at <a href='mailto:info@riverside.io'>info@riverside.io</a> to learn more.<br><br>You can use the form to get signed up right away. After doing so, follow up with us via <a href='mailto:info@riverside.io'>info@riverside.io</a>."
