--- a/_data/members.yml
+++ b/_data/members.yml
@@ -40,3 +40,6 @@
 - name : Victor Hill
   avatar : ./img/members/victorhill.jpg
   about : Victor Hill is an IT manager for the Computer Science department at UC Riverside. He's deeply passionate about IT and open source.
+- name : Judd Lillestrand 
+  avatar : ./img/members/juddlillestrand.jpg
+  about : Judd Lillestrand is a Ruby/Rails Developer, and the founder of http://mintsmith.com and http://scripsmart.com. He loves tech, the outdoors, and good people. 
