--- a/_data/members.yml
+++ b/_data/members.yml
@@ -29,7 +29,7 @@
   about : "Serial Entrepreneur. Founder & CEO of Maven 2.0. Currently building @hecklersports and @BermyArtist. Consulting for a few other cool start-ups."
 - name : Scott Motte
   avatar : ./img/members/scottmotte.png
-  about : Scott is founder of Signature.io. He also consults as a software engineer for startups around Southern California. He likes to code in Ruby and JavaScript.
+  about : Scott is a developer evangelist at [SendGrid](http://sendgrid.com). He likes to code in Ruby and JavaScript and is passionate about building tech community.
 - name : Victor Hill
   avatar : ./img/members/victorhill.jpg
   about : Victor Hill is an IT manager for the Computer Science department at UC Riverside. He's deeply passionate about IT and open source.
