Add gustavo blanco

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -36,3 +36,6 @@
 - name : Judd Lillestrand 
   avatar : ./img/members/juddlillestrand.jpg
   about : Judd Lillestrand is a Ruby/Rails Developer, and the founder of http://mintsmith.com and http://scripsmart.com. He loves tech, the outdoors, and good people. 
+- name : Gustavo Blanco 
+  avatar : ./img/members/gustavoblanco.jpg
+  about : Gustavo Blanco is a coffee lover, UC Riverside computer science student, and tech advocate for minorities. He likes startups and coding.
