--- a/_data/members.yml
+++ b/_data/members.yml
@@ -39,3 +39,6 @@
 - name : Gustavo Blanco 
   avatar : ./img/members/gustavoblanco.jpg
   about : Gustavo Blanco is a coffee lover, UC Riverside computer science student, and tech advocate for minorities. He likes startups and coding.
+- name : Claressa Jaen
+  avatar: ./img/members/claressajaen.jpg
+  about : Claressa Jaen is a photographer, graphic designer, and brand strategist with an emphasis in spiritual development. She specializes in non-profit, ministry, and small business based work.
