--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,13 +1,21 @@
 - name : Adam Webster
   avatar : ./img/members/adamwebster.jpg
   about : Adam is currently employed as an IT Director at the Inland Empire Labor Management Cooperation Committee. He is interested in exploring the intersection between technology community and creativity. 
-- name : Daniel Villarreal
+- name : Claressa Jaen
+  avatar: ./img/members/claressajaen.jpg
+  about : Claressa Jaen is a photographer, graphic designer, and brand strategist with an emphasis in spiritual development. She specializes in non-profit, ministry, and small business based work.- name : Daniel Villarreal
   avatar : ./img/members/danielvillarreal.jpg
   about : "Daniel handles system operations & web development for Cal State San Bernardino. He likes to build and break stuff and knows his way around Unix really well."
+- name : Gustavo Blanco 
+  avatar : ./img/members/gustavoblanco.jpg
+  about : Gustavo Blanco is a coffee lover, UC Riverside computer science student, and tech advocate for minorities. He likes startups and coding.
 - name: Jacob Lowe
   url: http://jacoblowe.me
   avatar : ./img/members/jacoblowe.jpg
   about: Jacob Lowe is passionate about the web and loves to push the bar with JavaScript. He helps organize Riverside.js. He is also a proud linux user.
+- name : Judd Lillestrand 
+  avatar : ./img/members/juddlillestrand.jpg
+  about : Judd Lillestrand is a Ruby/Rails Developer, and the founder of http://mintsmith.com and http://scripsmart.com. He loves tech, the outdoors, and good people. 
 - name : Justin Nelson
   avatar : ./img/members/justinnelson.jpg
   about : "Justin is a PhD student at UC Riverside, a card-carrying member of EFF, a Linux geek, and a rabble-rouser. He enjoys tinkering, beer, altnernative transportation, and free culture."
@@ -33,12 +41,3 @@
 - name : Victor Hill
   avatar : ./img/members/victorhill.jpg
   about : Victor Hill is an IT manager for the Computer Science department at UC Riverside. He's deeply passionate about IT and open source.
-- name : Judd Lillestrand 
-  avatar : ./img/members/juddlillestrand.jpg
-  about : Judd Lillestrand is a Ruby/Rails Developer, and the founder of http://mintsmith.com and http://scripsmart.com. He loves tech, the outdoors, and good people. 
-- name : Gustavo Blanco 
-  avatar : ./img/members/gustavoblanco.jpg
-  about : Gustavo Blanco is a coffee lover, UC Riverside computer science student, and tech advocate for minorities. He likes startups and coding.
-- name : Claressa Jaen
-  avatar: ./img/members/claressajaen.jpg
-  about : Claressa Jaen is a photographer, graphic designer, and brand strategist with an emphasis in spiritual development. She specializes in non-profit, ministry, and small business based work.
