Add Steven Harbauer

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -38,6 +38,9 @@
 - name : Scott Motte
   avatar : ./img/members/scottmotte.png
   about : Scott is a developer evangelist at [SendGrid](http://sendgrid.com). He likes to code in Ruby and JavaScript and is passionate about building tech community.
+- name : Steven Harbauer
+  avatar : ./img/members/stevenharbauer.jpg
+  about : Steven is a programmer and engineer. He spends his weekends teaching kids how to code at Riverside.io. 
 - name : Victor Hill
   avatar : ./img/members/victorhill.jpg
   about : Victor Hill is an IT manager for the Computer Science department at UC Riverside. He's deeply passionate about IT and open source.
