--- a/_data/members.yml
+++ b/_data/members.yml
@@ -3,7 +3,8 @@
   about : Adam is currently employed as an IT Director at the Inland Empire Labor Management Cooperation Committee. He is interested in exploring the intersection between technology community and creativity. 
 - name : Claressa Jaen
   avatar: ./img/members/claressajaen.jpg
-  about : Claressa Jaen is a photographer, graphic designer, and brand strategist with an emphasis in spiritual development. She specializes in non-profit, ministry, and small business based work.- name : Daniel Villarreal
+  about : Claressa Jaen is a photographer, graphic designer, and brand strategist with an emphasis in spiritual development. She specializes in non-profit, ministry, and small business based work.
+- name : Daniel Villarreal
   avatar : ./img/members/danielvillarreal.jpg
   about : "Daniel handles system operations & web development for Cal State San Bernardino. He likes to build and break stuff and knows his way around Unix really well."
 - name : Gustavo Blanco 
