--- a/_data/members.yml
+++ b/_data/members.yml
@@ -41,7 +41,7 @@
   about : "Serial Entrepreneur. Founder & CEO of Maven 2.0. Actively giving back to the startup community."
 - name : Scott Motte
   avatar : ./img/members/scottmotte.png
-  about : Scott is a developer evangelist at [SendGrid](http://sendgrid.com). He likes to code in Ruby and JavaScript and is passionate about building tech community.
+  about : Scott is a developer evangelist at [SendGrid](http://sendgrid.com). He likes to code in Ruby and JavaScript and is passionate about building tech community. Follow him [@scottmotte](http://twitter.com/scottmotte).
 - name : Steven Harbauer
   avatar : ./img/members/stevenharbauer.jpg
   about : Steven is a programmer and engineer. He spends his weekends teaching kids how to code at Riverside.io. 
