--- a/_data/members.yml
+++ b/_data/members.yml
@@ -22,6 +22,7 @@
   about : "Justin is a PhD student at UC Riverside, a card-carrying member of EFF, a Linux geek, and a rabble-rouser. He enjoys tinkering, beer, altnernative transportation, and free culture."
 - name : Kevin Carrington
   avatar : ./img/members/kevincarrington.jpg
+  about: "CEO of [Carrington Case](http://carringtoncase.com). Dreamer, designer, and supporter of tech education programs for kids."
 - name : Kevin Chandler
   avatar : ./img/members/kevinchandler.jpg
   about: "Kevin is a hacker, programmer, autodidact, productivity nut, cool guy, looking for his next big endeavor in life. You should follow him on twitter [@plaintshirts](https://twitter.com/plaintshirts)"
