Adds Maven links

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -36,10 +36,10 @@
   about : "Mike is an Enterprise Architect at UC Riverside. He is an organizer of StartupIE and enjoys programming in Java, Objective-C and Ruby."
 - name : Mike Stecker
   avatar : ./img/members/mikestecker.jpg
-  about : "Mike is the CTO for Maven 2.0 and specializes in #EECMS. He is currently tinkering with learning Ruby on Rails, Javascript and mobile application development."
+  about : "Mike is the CTO for [Maven 2.0](http://maven20.com) and specializes in #EECMS. He is currently tinkering with learning Ruby on Rails, Javascript and mobile application development."
 - name : Ralph Richardson
   avatar : ./img/members/ralphrichardson.jpg
-  about : "Serial Entrepreneur. Founder & CEO of Maven 2.0. Actively giving back to the startup community."
+  about : "Serial Entrepreneur. CEO of [Maven 2.0](http://maven20.com). Actively giving back to the startup community."
 - name : Scott Motte
   avatar : ./img/members/scottmotte.png
   about : Scott is a developer evangelist at [SendGrid](http://sendgrid.com). He likes to code in Ruby and JavaScript and is passionate about building tech community. Follow him [@scottmotte](http://twitter.com/scottmotte).
