--- a/_data/members.yml
+++ b/_data/members.yml
@@ -39,7 +39,7 @@
   about : "Mike is the CTO for [Maven 2.0](http://maven20.com) and specializes in #EECMS. He is currently tinkering with learning Ruby on Rails, Javascript and mobile application development."
 - name : Ralph Richardson
   avatar : ./img/members/ralphrichardson.jpg
-  about : "Serial Entrepreneur. CEO of [Maven 2.0](http://maven20.com). Actively giving back to the startup community."
+  about : "Serial Entrepreneur. CEO of [Maven 2.0](http://maven20.com). Actively giving back to the startup community. Follow him [@ralphrichardson](http://twitter.com/ralphrichardson)."
 - name : Scott Motte
   avatar : ./img/members/scottmotte.png
   about : Scott is a developer evangelist at [SendGrid](http://sendgrid.com). He likes to code in Ruby and JavaScript and is passionate about building tech community. Follow him [@scottmotte](http://twitter.com/scottmotte).
