Fix spelling mistake

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -19,7 +19,7 @@
   about : Judd Lillestrand is a Ruby/Rails Developer, and the founder of http://mintsmith.com and http://scripsmart.com. He loves tech, the outdoors, and good people. 
 - name : Justin Nelson
   avatar : ./img/members/justinnelson.jpg
-  about : "Justin is a PhD student at UC Riverside, a card-carrying member of EFF, a Linux geek, and a rabble-rouser. He enjoys tinkering, beer, altnernative transportation, and free culture."
+  about : "Justin is a PhD student at UC Riverside, a card-carrying member of EFF, a Linux geek, and a rabble-rouser. He enjoys tinkering, beer, alternative transportation, and free culture."
 - name : Kevin Carrington
   avatar : ./img/members/kevincarrington.jpg
   about: "CEO of [Carrington Case](http://carringtoncase.com). Dreamer, designer, and supporter of tech education programs for kids."
