--- a/_data/members.yml
+++ b/_data/members.yml
@@ -31,6 +31,7 @@
   about : "Thanks to Riverside.IO, I've signed several website contracts, made a lot of talented friends, and found a hot girl and got engaged to be married. If you come stop by, you WILL find yourself a girl (or guy) and save a LOT on car insurance too. Gosh o MIGHTY. I love Riverside.IO so much that I can barely walk. Barely BREATHE. I need someone to walk across the street with or I'll fall down. I love it so much that I think I'll have my wedding here. Maybe I'll name my first kid Riverside.IO. You should too."
 - name : Lauren Patterson
   avatar : ./img/members/laurenpatterson.jpg
+  about: "Hi I'm Lauren."
 - name : Mike Kennedy
   avatar : ./img/members/mikekennedy.jpg
   about : "Mike is an Enterprise Architect at UC Riverside. He is an organizer of StartupIE and enjoys programming in Java, Objective-C and Ruby."
