adding in new member Henry Castro

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -10,6 +10,8 @@
 - name : Gustavo Blanco 
   avatar : ./img/members/gustavoblanco.jpg
   about : Gustavo Blanco is a coffee lover, UC Riverside computer science student, and tech advocate for minorities. He likes startups and coding.
+- name : Henry Castro
+  avatar : ./img/members/henrycastro.jpeg
 - name: Jacob Lowe
   url: http://jacoblowe.me
   avatar : ./img/members/jacoblowe.jpg
