Update Henry's info

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -12,6 +12,7 @@
   about : Gustavo Blanco is a coffee lover, UC Riverside computer science student, and tech advocate for minorities. He likes startups and coding.
 - name : Henry Castro
   avatar : ./img/members/henrycastro.jpeg
+  about : Henry is the founder of [CodeFellas.com](http://thecodefellas.com). His talents range from SEO to design. He likes startups and web marketing.  
 - name: Jacob Lowe
   url: http://jacoblowe.me
   avatar : ./img/members/jacoblowe.jpg
