New testimonial - Judd Lillestrand

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -16,3 +16,6 @@
 - name : Ralph Richardson
   avatar : ./img/members/ralphrichardson.jpg
   contents : "I'm cool. And cool people need to hang out with other cool people. That's why I go to Riverside.io, and to build businesses and startups and stuff."
+- name : Judd Lillestrand
+  avatar : ./img/members/juddlillestrand.jpg
+  contents : "After moving to the Riverside Area, I was happy to find a group of people committed to fostering growth of the local tech scene. They inspired me to get involved and I'm enjoying the great people, interesting conversations and quality events."
