--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -19,3 +19,6 @@
 - name : Judd Lillestrand
   avatar : ./img/members/juddlillestrand.jpg
   contents : "After moving to the Riverside Area, I was happy to find a group of people committed to fostering growth of the local tech scene. They inspired me to get involved and I'm enjoying the great people, interesting conversations and quality events."
+- name : Kevin Carrington
+  avatar : ./img/members/kevincarrington.jpg
+  contents: "Coming from the east coast to the I.E., it was a challenge finding like minded tech enthusiast--until I found Riverside.io. It instantly felt like home. I really enjoy the location, collaboration with members, and the support we receive from the City of Riverside. Also, my company has grown since we joined the space."
