--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -7,7 +7,7 @@ about :
   - icon: icon-rocket
     contents: "Coworking and Community at just [$100/month](https://riversideio-access.herokuapp.com)"
 expect :
-  contents: 'Open tables, chalkboard wall, 100mbps internets, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on [Foursquare](http://4sq.com/QvKQ2Z).'
+  contents: 'Open tables, chalkboard wall, 100mbps internets, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on [Swarm (Foursquare)](http://4sq.com/QvKQ2Z).'
   list :
     - WIFI
     - 24/7 Access
