--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -1,11 +1,11 @@
 subheader: The Riverside coworking space located in the heart of downtown.
 about :
   - icon: icon-clock
-    contents : 24/7 Member Access and Daily Rates for visitors
+    contents : 24/7 Member Access<br>Daily rates for visitors
   - icon: icon-location
     contents: "Downtown Riverside<br> [3976 Market St, Riverside, CA](https://www.google.com/maps/place/3976+Market+St,+Riverside,+CA+92501/@33.9810399,-117.3766748,17z/data=!3m1!4b1!4m2!3m1!1s0x80dcb1ee33f8cb9b:0x4e8dd2fb3a39642f)"
   - icon: icon-rocket
-    contents: "Coworking and Community at just [$100/month](https://riversideio-access.herokuapp.com)"
+    contents: "Coworking and Community at just [$100/month](https://riversideio-access.herokuapp.com)<br>[$50/month (students)](https://riversideio-access.herokuapp.com)"
 expect :
   contents: 'Open tables, chalkboard wall, 100mbps internets, typing fingers, startup stickers, creative vibing, boxes of cookies, stocked fridge, witty banter, surprise doodles, and overall camaraderie. For the love of mayorship, dont forget to check in on [Swarm (Foursquare)](http://4sq.com/QvKQ2Z).'
   list :
@@ -22,13 +22,13 @@ expect :
     - Ping pong table
   photos :
     - src: /img/space/1.jpeg
-      # description: Find a desk.
+      # description:
     - src: /img/space/2.jpeg
-      # description: Use the whiteboards.
+      # description:
     - src: /img/space/3.jpeg
-      # description: Put your company logo or upcoming event in the window.
+      # description:
     - src: /img/space/4.jpeg
-      # description: Take a break on the couch.
+      # description:
     - src: /img/space/5.jpeg
-      # description: Work outside in the California weather.
-join : "How much does it cost? <br>Membership is $100/month $50/month for students.<br><br>Email us at <a href='mailto:info@riverside.io'>info@riverside.io</a> to learn more.<br><br>You can use the form to get signed up right away. After doing so, follow up with us via <a href='mailto:info@riverside.io'>info@riverside.io</a>."
+      # description:
+join : "How much does it cost? <br>Membership is:<br>$100/month<br>$50/month for students<br><br>Email us at <a href='mailto:info@riverside.io'>info@riverside.io</a> to learn more.<br><br>You can use the form to get signed up right away. After doing so, follow up with us via <a href='mailto:info@riverside.io'>info@riverside.io</a>."
