24/7 member access -> 24/7 access

--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -1,7 +1,7 @@
 subheader: The Riverside coworking space located in the heart of downtown.
 about :
   - icon: icon-clock
-    contents : 24/7 Member Access<br>Daily rates for visitors
+    contents : 24/7 Access<br>Daily rates for visitors
   - icon: icon-location
     contents: "Downtown Riverside<br> [3976 Market St, Riverside, CA](https://www.google.com/maps/place/3976+Market+St,+Riverside,+CA+92501/@33.9810399,-117.3766748,17z/data=!3m1!4b1!4m2!3m1!1s0x80dcb1ee33f8cb9b:0x4e8dd2fb3a39642f)"
   - icon: icon-rocket
