Add @audreyr to members.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,6 +1,9 @@
 - name : Adam Webster
   avatar : ./img/members/adamwebster.jpg
   about : Adam is currently employed as an IT Director at the Inland Empire Labor Management Cooperation Committee. He is interested in exploring the intersection between technology community and creativity.
+- name : Audrey Roy Greenfeld
+  avatar: ./img/members/audreyroygreenfeld.jpg
+  about : Audrey is an [artist](http://www.audreymroy.com/art/), [writer](http://audreyr.com/), and [hacker](https://github.com/audreyr). She is a principal at [Cartwheel Web](http://www.cartwheelweb.com/) and co-author of [Two Scoops of Django](http://www.amazon.com/Two-Scoops-Django-Best-Practices/dp/098146730X/).
 - name : Claressa Jaen
   avatar: ./img/members/claressajaen.jpg
   about : Claressa Jaen is a photographer, graphic designer, and brand strategist with an emphasis in spiritual development. She specializes in non-profit, ministry, and small business based work.
