Minor push to bump page generation process on github. domain still not resolving

--- a/_data/faqs.yml
+++ b/_data/faqs.yml
@@ -1,7 +1,7 @@
 - question : What is Riverside.IO?
   answer :  Riverside.IO is a hackerspace and co-working space in the heart of downtown Riverside.
 - question : What does Riverside.IO do?
-  answer : "We provide workspace, Internet, snacks, and other resources for individuals interested in developing projects involving computers and small electronics, for either personal or business use. We also provide workshops and other resources for people to learn about technology, and space to put that knowledge to use."
+  answer : "We provide workspace, internet, snacks, and other resources for individuals interested in developing projects involving computers and small electronics, for either personal or business use. We also provide workshops and other resources for people to learn about technology, and space to put that knowledge to use."
 - question : What is a hackerspace?
   answer : "A [hackerspace](http://hackerspaces.org/wiki/) (also referred to as a hacklab, makerspace, or hackspace) is a community-operated physical space where people with common interests, often in computers,"
 - question : How do I become a member?
